Replace getPhysicalBindingForAction with getLocalisedButtonNameForAction as getPhysicalBindingForAction used implmentation specific behaviour
Specifically xrEnumerateBoundSourcesForAction's paths are only valid for xrGetInputSourceLocalizedName calls, not neccissarily xrPathToString calls